--- a/nomnichi.cabal
+++ b/nomnichi.cabal
@@ -32,6 +32,7 @@ library
                      Handler.Nomnichi
                      Handler.Usermanagement
                      Handler.Loginform
+                     Handler.Pages
 
     if flag(dev) || flag(library-only)
         cpp-options:   -DDEVELOPMENT
